# SimpleServer

./: .gitignore  LICENSE  README  README.md  SimpleServer.cabal  SimpleServer.hs  simpleServer.hs  stack.yaml
src/: Main.hs  SimpleServer.hs
