-- SimpleServer: A simple static file server, for when apache is overkill

name:                SimpleServer
version:             0.1.0.0
synopsis:            A simple static file server, for when apache is overkill
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              Anupam Jain
maintainer:          ajnsit@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable SimpleServer
  main-is:             SimpleServer.hs
  -- other-modules:       
  build-depends:       base >=4 && <5,
                       wai-app-static >=1.3 && <2,
                       warp >=1.3 && <2


