-- SimpleServer: A simple static file server, for when apache is overkill
name          : SimpleServer
version       : 0.1.1.0
synopsis      : A simple static file server, for when apache is overkill
description   : A simple static file server, for when apache is overkill
license       : MIT
license-file  : LICENSE
author        : Anupam Jain
maintainer    : ajnsit@gmail.com
category      : Web
build-type    : Simple
cabal-version : >=1.16

executable simpleserver
  main-is            : SimpleServer.hs
  -- other-modules:       
  build-depends      : base
                     , wai-routes
                     , warp
                     , cmdargs
  buildable          : True
  hs-source-dirs     : src
  default-language   : Haskell2010
